Add feature slot-replayer
if feature is enabled:
- don't do speculative execution
- don't take time_cursor() into account while initializing block_sequencer

Signed-off-by: Jean-François <jfm@laposte.net>

--- a/massa-execution-worker/Cargo.toml
+++ b/massa-execution-worker/Cargo.toml
@@ -47,8 +47,8 @@ dump-block = [
 ]
 db_storage_backend = []
 file_storage_backend = []
-
 execution-info = ["execution-trace"]
+slot-replayer = []
 
 [dependencies]
 anyhow = { workspace = true }
