Add feature slot-replayer
if feature is enabled:
- don't do speculative execution
- don't take time_cursor() into account while initializing block_sequencer
- print ledger changes while replaying slots

Signed-off-by: Jean-François <jfm@laposte.net>

--- a/massa-execution-exports/Cargo.toml
+++ b/massa-execution-exports/Cargo.toml
@@ -28,6 +28,7 @@ massa_pos_exports = {workspace = true}
 massa_module_cache = {workspace = true}
 massa_versioning = {workspace = true}
 massa-sc-runtime = {workspace = true}
+serde = {workspace = true, "features" = ["derive"]}
 
 [dev-dependencies]
 mockall = {workspace = true}
