--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -187,6 +187,7 @@
         client_certificate_path = "../massa-client/config/tls_private_client.pem"
         # client private key path
         client_private_key_path = "../massa-client/config/tls_private_client.key"
+
 [execution]
     # max number of generated events kept in RAM
     max_final_events = 10000
@@ -230,6 +231,10 @@
     final_history_length = 100
     # path of the initial deferred credits file
     initial_deferred_credits_path = "base_config/deferred_credits.json"
+    # Interval of periods between creation of each ledger backup
+    ledger_backup_periods_interval = 100
+    # Maximum number of ledger backup saved
+    max_ledger_backups = 100
 
 [consensus]
     # max number of previously discarded blocks kept in RAM
@@ -435,3 +440,5 @@
 # Dump final blocks (in grpc binary format) by activating the feature: --features dump-block
 [block_dump]
     block_dump_folder_path = "dump/blocks"
+    # max number of blocks to keep in the dump folder
+    max_blocks = 2048000
