--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -37,6 +37,8 @@
     enable_ws = false
     # whether to broadcast for blocks, endorsements and operations
     enable_broadcast = false
+    # deferred credits delta (in milliseconds)
+    deferred_credits_delta = 7776000000 # ~ 3 months (90×24×60×60×1000) in milliseconds
 
 [grpc]
     [grpc.public]
@@ -185,6 +187,7 @@
         client_certificate_path = "../massa-client/config/tls_private_client.pem"
         # client private key path
         client_private_key_path = "../massa-client/config/tls_private_client.key"
+
 [execution]
     # max number of generated events kept in RAM
     max_final_events = 10000
@@ -228,6 +231,10 @@
     final_history_length = 100
     # path of the initial deferred credits file
     initial_deferred_credits_path = "base_config/deferred_credits.json"
+    # Interval of periods between creation of each ledger backup
+    ledger_backup_periods_interval = 100
+    # Maximum number of ledger backup saved
+    max_ledger_backups = 100
 
 [consensus]
     # max number of previously discarded blocks kept in RAM
@@ -345,11 +352,16 @@
 
 [bootstrap]
     # list of bootstrap (ip, node id)
-    bootstrap_list = [ 
-        [ "149.202.84.7:31245", "N1kKfgrCveVnosUkxTzaBw5cf9f2cbTvK3R5Ssb2Pf76au8xwmH",],
-        [ "149.202.84.39:31245", "N12sNdL7YwSawpnJrk9XCWDjKbgfNamAobp62AX5qfkgpBkGh2wC",],
-        [ "37.187.156.118:31245", "N1NnuSW48GKGaYZamAVKXfXbbnt3StxWoHpYtBZSJvY9e8U1BTC",],
-        [ "149.202.65.130:31245", "N1DZb3ao8BEtdsYP1KYyWacpTENHDrQboxGaYDL4U8MQppaxvzo",],
+    bootstrap_list = [
+        ["149.202.86.103:31245", "N16noomm9akwBSTkvhs4KX6kjbhVhYkLqrzneCwBdo2SUE8axHx"],
+        ["149.202.89.125:31245", "N12bYghvuhCuQ38iSAGQvKTb1iXtwzPZhNJLhWQPYcmgz8PDPAGo"],
+        ["158.69.120.215:31245", "N1jRVjMZK8ZEmUGxDbLgHv3BTeQy8wHnazKCdcpQy4sFxu9d8GW"],
+        ["158.69.23.120:31245", "N12B7LqdyVVBXr8TMygU28R7JYxUR2dsLLp63YXtH9XAR1R2NUrY"],
+        ["198.27.74.5:31245", "N1FoYxXoSC39ZamAvwi7srz3oRrJ8JC3EvRhcqXPCD7vaQZTHKV"],
+        ["51.75.60.228:31245", "N1nRDdGq7DFD7AvSz5pgAsXCvkcqoL5Xf3kHr8Yd3TTUgtBcBun"],
+        ["[2001:41d0:1004:67::]:31245", "N16noomm9akwBSTkvhs4KX6kjbhVhYkLqrzneCwBdo2SUE8axHx"],
+        ["[2001:41d0:a:7f7d::]:31245", "N12bYghvuhCuQ38iSAGQvKTb1iXtwzPZhNJLhWQPYcmgz8PDPAGo"],
+        ["[2001:41d0:602:21e4::]:31245", "N1nRDdGq7DFD7AvSz5pgAsXCvkcqoL5Xf3kHr8Yd3TTUgtBcBun"],
     ]
     # force the bootstrap protocol to use: "IPv4", "IPv6", or "Both". Defaults to using both protocols.
     bootstrap_protocol = "Both"
@@ -428,3 +440,5 @@
 # Dump final blocks (in grpc binary format) by activating the feature: --features dump-block
 [block_dump]
     block_dump_folder_path = "dump/blocks"
+    # max number of blocks to keep in the dump folder
+    max_blocks = 2048000
