--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,7 +66,6 @@ lto = true           # Enables Link Time Optimization, enabling more aggressive 
 # The saved snapshot can then be used to restart the network from the snapshot.
 [workspace.dependencies]
 # Internal packages
-massa_asc = { path = "./massa-asc" }
 massa_api = { path = "./massa-api" }
 massa_api_exports = { path = "./massa-api-exports" }
 massa_async_pool = { path = "./massa-async-pool" }
@@ -77,6 +76,7 @@ massa_consensus_exports = { path = "./massa-consensus-exports" }
 massa_consensus_worker = { path = "./massa-consensus-worker" }
 massa_db_exports = { path = "./massa-db-exports" }
 massa_db_worker = { path = "./massa-db-worker" }
+massa_deferred_calls = { path = "./massa-deferred-calls" }
 massa_executed_ops = { path = "./massa-executed-ops" }
 massa_execution_exports = { path = "./massa-execution-exports" }
 massa_execution_worker = { path = "./massa-execution-worker" }
