--- a/Cargo.toml
+++ b/Cargo.toml
@@ -175,7 +175,7 @@ serde = "1.0"
 serde_json = "1.0"
 serde_qs = "0.12"
 serde_with = "3.3"
-serde_yaml = "0.9.34+deprecated"
+serde_yaml = "0.9.34" # 0.9.34+deprecated
 serial_test = "2.0"
 sha2 = "=0.10"
 sha3 = "=0.10"
