--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -273,7 +273,7 @@
     message_timeout = 5000
     # timeout after which a peer tester will consider the peer unreachable
     tester_timeout = 10000
-    # timeout after whick we consider a node does not have the block we asked for
+    # timeout after which we consider a node does not have the block we asked for
     ask_block_timeout = 10000
     # Max known blocks we keep during their propagation
     max_blocks_kept_for_propagation = 300
@@ -391,7 +391,7 @@
     max_clock_delta = 5000
     # [server] data is cached for cache duration milliseconds
     cache_duration = 15000
-    # max number of simulataneous bootstraps for server
+    # max number of simultaneous bootstraps for server
     max_simultaneous_bootstraps = 2
     # max size of recently bootstrapped IP cache
     ip_list_max_size = 10000
