--- a/massa-api-exports/Cargo.toml
+++ b/massa-api-exports/Cargo.toml
@@ -22,6 +22,7 @@ massa_final_state = {workspace = true}
 massa_hash = {workspace = true}
 massa_wallet = {workspace = true}
 massa_versioning = {workspace = true}
+massa_deferred_calls = { workspace = true }
 
 [dev-dependencies]
 serial_test = {workspace = true}
