--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,7 +107,7 @@ massa_wallet = { path = "./massa-wallet" }
 
 # Massa projects dependencies
 massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", "rev" = "38950875a7aa406fedc4f0b8336864e5ff290f2c" }
-massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "rev" = "80352eb9f2a6b90a441cd64433d8874c33fb384f" }
+massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "branch" = "next_breaking_update" }
 peernet = { git = "https://github.com/massalabs/PeerNet", "rev" = "04b05ddd320fbe76cc858115af7b5fc28bdb8310" }
 
 # Common dependencies
@@ -175,7 +175,7 @@ serde = "1.0"
 serde_json = "1.0"
 serde_qs = "0.12"
 serde_with = "3.3"
-serde_yaml = "0.9"
+serde_yaml = "0.9.34" # 0.9.34+deprecated
 serial_test = "2.0"
 sha2 = "=0.10"
 sha3 = "=0.10"
