--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+# Actions doc / www page:
 # actions/checkout: https://github.com/actions/checkout
+# Swatinem/rust-cache: https://github.com/Swatinem/rust-cache
 #
 
 jobs:
@@ -33,20 +35,15 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "recursive"
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
           toolchain: 1.81.0
           components: rustfmt
-          override: true
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "sanity"
           save-if: ${{ github.ref_name == 'main' }}
-      - uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
+      - run: cargo fmt --all --check
 
   check:
     if: github.ref != 'refs/heads/staging'
