--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,8 @@ concurrency:
 # Actions doc / www page:
 # actions/checkout: https://github.com/actions/checkout
 # Swatinem/rust-cache: https://github.com/Swatinem/rust-cache
-#
+# dtolnay/rust-toolchain: https://github.com/dtolnay/rust-toolchain
+# codecov/codecov-action: https://github.com/codecov/codecov-action
 
 jobs:
   # Quick tests on each commit/PR
@@ -54,9 +55,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "recursive"
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
           toolchain: 1.81.0
       - uses: Swatinem/rust-cache@v2
         with:
@@ -66,9 +66,7 @@ jobs:
         with:
           version: '23.x'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions-rs/cargo@v1
-        with:
-          command: check
+      - run: cargo check
 
   clippy:
     if: github.ref != 'refs/heads/staging'
@@ -79,12 +77,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "recursive"
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
           toolchain: 1.81.0
           components: clippy
-          override: true
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "clippy"
@@ -93,10 +89,7 @@ jobs:
         with:
           version: '23.x'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions-rs/clippy-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: --no-deps --all-targets
+      - run: cargo clippy --no-deps --all-targets
 
   security:
     if: github.ref != 'refs/heads/staging'
@@ -188,11 +181,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "recursive"
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
           toolchain: 1.81.0
-          override: true
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "massa"
@@ -202,22 +193,11 @@ jobs:
           version: "23.x"
           include-pre-releases: false
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: cargo-nextest --locked
-      - uses: actions-rs/cargo@v1
-        with:
-          command: nextest
-          args: run --retries 10 --profile ci --all-features
-      - uses: actions-rs/cargo@v1
-        with:
-          command: clean
-      - uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --doc
-      - uses: codecov/codecov-action@v3
+      - run: cargo install cargo-nextest --locked
+      - run: cargo nextest run --retries 10 --profile ci --all-features
+      - run: cargo clean
+      - run: cargo test --doc
+      - uses: codecov/codecov-action@v4
         with:
           files: lcov.info
           fail_ci_if_error: false
