--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -216,12 +216,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "recursive"
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
           toolchain: 1.81.0
           components: rustfmt
-          override: true
       - uses: actions/checkout@v4
         with:
           repository: massalabs/gas-calibration
@@ -251,12 +249,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: "recursive"
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
           toolchain: 1.81.0
           components: rustfmt
-          override: true
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "doc"
@@ -265,10 +261,7 @@ jobs:
         with:
           version: '23.x'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions-rs/cargo@v1
-        with:
-          command: doc
-          args: --no-deps --document-private-items
+      - run: cargo doc --no-deps --document-private-items
       - uses: JamesIves/github-pages-deploy-action@4.1.7
         with:
           branch: gh-pages
