--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,28 +22,29 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+# Actions doc / www page:
+# actions/checkout: https://github.com/actions/checkout
+# Swatinem/rust-cache: https://github.com/Swatinem/rust-cache
+# dtolnay/rust-toolchain: https://github.com/dtolnay/rust-toolchain
+# codecov/codecov-action: https://github.com/codecov/codecov-action
+
 jobs:
   # Quick tests on each commit/PR
   sanity:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: "recursive"
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
           toolchain: 1.81.0
           components: rustfmt
-          override: true
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "sanity"
           save-if: ${{ github.ref_name == 'main' }}
-      - uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
+      - run: cargo fmt --all --check
 
   check:
     if: github.ref != 'refs/heads/staging'
@@ -51,12 +52,11 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: "recursive"
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
           toolchain: 1.81.0
       - uses: Swatinem/rust-cache@v2
         with:
@@ -66,9 +66,7 @@ jobs:
         with:
           version: '23.x'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions-rs/cargo@v1
-        with:
-          command: check
+      - run: cargo check
 
   clippy:
     if: github.ref != 'refs/heads/staging'
@@ -76,15 +74,13 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: "recursive"
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
           toolchain: 1.81.0
           components: clippy
-          override: true
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "clippy"
@@ -93,10 +89,7 @@ jobs:
         with:
           version: '23.x'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions-rs/clippy-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: --no-deps --all-targets
+      - run: cargo clippy --no-deps --all-targets
 
   security:
     if: github.ref != 'refs/heads/staging'
@@ -104,7 +97,7 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: "recursive"
       # - uses: actions-rust-lang/audit@v1
@@ -185,14 +178,12 @@ jobs:
         if: runner.os == 'Linux'
         run: df -h
       - uses: ilammy/setup-nasm@v1
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: "recursive"
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
           toolchain: 1.81.0
-          override: true
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "massa"
@@ -202,22 +193,11 @@ jobs:
           version: "23.x"
           include-pre-releases: false
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: cargo-nextest --locked
-      - uses: actions-rs/cargo@v1
-        with:
-          command: nextest
-          args: run --retries 10 --profile ci --all-features
-      - uses: actions-rs/cargo@v1
-        with:
-          command: clean
-      - uses: actions-rs/cargo@v1
-        with:
-          command: test
-          args: --doc
-      - uses: codecov/codecov-action@v3
+      - run: cargo install cargo-nextest --locked
+      - run: cargo nextest run --retries 10 --profile ci --all-features
+      - run: cargo clean
+      - run: cargo test --doc
+      - uses: codecov/codecov-action@v4
         with:
           files: lcov.info
           fail_ci_if_error: false
@@ -233,21 +213,19 @@ jobs:
     if: github.ref != 'refs/heads/staging' && github.ref != 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: "recursive"
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
           toolchain: 1.81.0
           components: rustfmt
-          override: true
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           repository: massalabs/gas-calibration
           path: gas-calibration
           ref: main
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           repository: massalabs/massa-as-sdk
           path: massa-as-sdk
@@ -268,15 +246,13 @@ jobs:
   doc:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: "recursive"
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
           toolchain: 1.81.0
           components: rustfmt
-          override: true
       - uses: Swatinem/rust-cache@v2
         with:
           shared-key: "doc"
@@ -285,11 +261,8 @@ jobs:
         with:
           version: '23.x'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions-rs/cargo@v1
-        with:
-          command: doc
-          args: --no-deps --document-private-items
-      - uses: JamesIves/github-pages-deploy-action@4.1.7
+      - run: cargo doc --no-deps --document-private-items
+      - uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: target/doc
@@ -297,7 +270,7 @@ jobs:
   unit_tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: "recursive"
       - name: setup_tests
