--- a/massa-sdk/Cargo.toml
+++ b/massa-sdk/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [dependencies]
 jsonrpsee = {workspace = true, "features" = ["client"]}
-jsonrpsee-http-client = {workspace = true, "features" = ["webpki-tls"]}
-jsonrpsee-ws-client = {workspace = true, "features" = ["webpki-tls"]}
+jsonrpsee-http-client = {workspace = true}
+jsonrpsee-ws-client = {workspace = true}
 http = {workspace = true}
 tonic = {workspace = true, "features" = ["gzip"]}   # BOM UPGRADE     Revert to {"version": "0.9.1", "features": ["gzip"]} if problem
 thiserror = {workspace = true}
