--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,8 +106,10 @@ massa_versioning = { path = "./massa-versioning" }
 massa_wallet = { path = "./massa-wallet" }
 
 # Massa projects dependencies
-massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", "rev" = "38950875a7aa406fedc4f0b8336864e5ff290f2c" }
-massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "branch" = "next_breaking_update" }
+massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", "rev" = "48295f3bb23a17075b7be9b4c39f249ef77bef40" }
+# massa-proto-rs = { path = "../massa-proto-rs" }
+massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "branch" = "feature/update_tonic_12_3_v2" }
+# massa-sc-runtime = { path = "../massa-sc-runtime_3" }
 peernet = { git = "https://github.com/massalabs/PeerNet", "rev" = "04b05ddd320fbe76cc858115af7b5fc28bdb8310" }
 
 # Common dependencies
@@ -138,15 +140,15 @@ futures = "0.3"
 futures-util = "0.3"
 h2 = "0.3"
 hex-literal = "0.4"
-http = "0.2"
+http = "1.1.0"
 humantime = "2.1"
-hyper = "0.14"
+hyper = "1"
 ip_rfc = "0.1"
 is-terminal = "0.4"
 itertools = "0.12"
-jsonrpsee = "0.20"
-jsonrpsee-http-client = "0.20"
-jsonrpsee-ws-client = "0.20"
+jsonrpsee = "0.24"
+jsonrpsee-http-client = "0.24"
+jsonrpsee-ws-client = "0.24"
 lazy_static = "1.4"
 libsecp256k1 = "=0.7"
 mio = "0.8.11"
@@ -191,12 +193,13 @@ time = "0.3"
 tokio = "1.23"
 tokio-stream = "0.1"
 toml_edit = "0.21"
-tonic = "0.10"
-tonic-health = "0.10"
-tonic-reflection = "0.10"
-tonic-web = "0.10"
-tower = "0.4.13"
-tower-http = "0.4.0"
+tonic = "0.12"
+tonic-health = "0.12"
+tonic-reflection = "0.12"
+tonic-web = "0.12"
+tower = "0.4"
+tower-http = "0.6"
+tower-service = "0.3"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 unsigned-varint = "0.8"
