--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,10 +107,12 @@ massa_wallet = { path = "./massa-wallet" }
 
 # Massa projects dependencies
 massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", "rev" = "48295f3bb23a17075b7be9b4c39f249ef77bef40" }
-# massa-proto-rs = { path = "../massa-proto-rs" }
 massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "branch" = "feature/update_tonic_12_3_v2" }
-# massa-sc-runtime = { path = "../massa-sc-runtime_3" }
 peernet = { git = "https://github.com/massalabs/PeerNet", "rev" = "04b05ddd320fbe76cc858115af7b5fc28bdb8310" }
+# Dev only - use local dependencies
+# massa-proto-rs = { path = "../massa-proto-rs" }
+# massa-sc-runtime = { path = "../massa-sc-runtime_3" }
+# peernet = { path = "../peernet" }
 
 # Common dependencies
 transition = { git = "https://github.com/massalabs/transition.git", "rev" = "93fa3bf82f9f5ff421c78536879b7fd1b948ca75" }
