--- a/massa-xtask/Cargo.toml
+++ b/massa-xtask/Cargo.toml
@@ -4,6 +4,9 @@ version = "2.3.0"
 edition = "2021"
 
 [dependencies]
+# update_package_versions dependencies
 massa_models = {workspace = true}
 toml_edit = {workspace = true}   # BOM UPGRADE     Revert to "0.19.8" if problem
 walkdir = {workspace = true}
+# check_gas_costs dependencies
+massa-sc-runtime = {workspace = true, features = ["gas_calibration"]}
