--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ members = [
   "massa-versioning",
   "massa-grpc",
   "massa-xtask",
+  "massa-event-cache",
 ]
 resolver = "2"
 
@@ -105,6 +106,7 @@ massa_test_framework = { path = "./massa-test-framework" }
 massa_time = { path = "./massa-time" }
 massa_versioning = { path = "./massa-versioning" }
 massa_wallet = { path = "./massa-wallet" }
+massa_event_cache = { path = "./massa-event-cache" }
 
 # Massa projects dependencies
 # massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", branch = "deferred_calls" }
