--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -221,6 +221,12 @@
     broadcast_slot_execution_traces_channel_capacity = 5000
     # Max slots execution traces to keep in cache
     execution_traces_limit = 320
+    # path to the event cache storage
+    event_cache_path = "storage/event_cache/rocks_db"
+    # maximum number of entries we want to keep in the Event cache
+    event_cache_size = 2000
+    # amount of entries removed when `event_cache_size` is reached
+    event_snip_amount = 10
 
 [ledger]
     # path to the initial ledger
