--- a/massa-event-cache/Cargo.toml
+++ b/massa-event-cache/Cargo.toml
@@ -16,6 +16,7 @@ nom = {workspace = true}
 rocksdb = {workspace = true}
 tracing = {workspace = true}
 parking_lot = { workspace = true }
+num_enum = { workspace = true }
 massa_models = {workspace = true}
 massa_serialization = {workspace = true}
 mockall = {workspace = true, optional = true}
