--- a/massa-event-cache/Cargo.toml
+++ b/massa-event-cache/Cargo.toml
@@ -19,6 +19,7 @@ parking_lot = { workspace = true }
 num_enum = { workspace = true }
 massa_models = {workspace = true}
 massa_serialization = {workspace = true}
+massa_time = {workspace = true}
 mockall = {workspace = true, optional = true}
 mockall_wrap = {workspace = true, optional = true}
 
