--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ massa_consensus_exports = { path = "./massa-consensus-exports" }
 massa_consensus_worker = { path = "./massa-consensus-worker" }
 massa_db_exports = { path = "./massa-db-exports" }
 massa_db_worker = { path = "./massa-db-worker" }
+massa_deferred_calls = { path = "./massa-deferred-calls" }
 massa_executed_ops = { path = "./massa-executed-ops" }
 massa_execution_exports = { path = "./massa-execution-exports" }
 massa_execution_worker = { path = "./massa-execution-worker" }
@@ -106,12 +107,16 @@ massa_versioning = { path = "./massa-versioning" }
 massa_wallet = { path = "./massa-wallet" }
 
 # Massa projects dependencies
-massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", branch = "mainnet_2_3" }
-massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "branch" = "next_breaking_update" }
+# massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", branch = "deferred_calls" }
+# massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "branch" = "deferred_calls" }
+massa-proto-rs = { git = "https://github.com/massalabs/massa-proto-rs", "rev" = "b5267178eaf266ec724691d7de163e4c34343416" }
+massa-sc-runtime = { git = "https://github.com/massalabs/massa-sc-runtime", "rev" = "82dd714d38cbcd863ae0bb215c06442917bb6404" }
+
+
 peernet = { git = "https://github.com/massalabs/PeerNet", "rev" = "04b05ddd320fbe76cc858115af7b5fc28bdb8310" }
 # Dev only - use local dependencies
 # massa-proto-rs = { path = "../massa-proto-rs" }
-# massa-sc-runtime = { path = "../massa-sc-runtime_3" }
+# massa-sc-runtime = { path = "../massa-sc-runtime" }
 # peernet = { path = "../peernet" }
 
 # Common dependencies
@@ -179,7 +184,7 @@ serde = "1.0"
 serde_json = "1.0"
 serde_qs = "0.12"
 serde_with = "3.3"
-serde_yaml = "0.9.34" # 0.9.34+deprecated
+serde_yaml = "0.9.34"                                                                                                    # 0.9.34+deprecated
 serial_test = "2.0"
 sha2 = "=0.10"
 sha3 = "=0.10"
