--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -227,6 +227,8 @@
     event_cache_size = 20071520
     # amount of entries removed when `event_cache_size` is reached
     event_snip_amount = 10
+    # maximum number of events return by a query
+    max_event_per_query = 7000
 
 [ledger]
     # path to the initial ledger
