Add massa event cache crate (#4769)
* Add massa event cache crate

* Add event cache controller into massa execution

* Cargo fmt

* Add event cache config in masa-node

* Minor fixes

* Cargo clippy fixes

* Cargo clippy fixes

* Add limits & security checks

* Add controller + manager

* Cargo fmt pass

* Fix check/clippy with --all-targets

* Better event cache clear at startup && better filtering

* Rename to config to max_call_stack_length

* Improve event cache filtering

* Avoid lock contention in controller::get_filtered_sc_output_events

* Improve comment

* Add query limit

* Add tick delay in event cache writer thread

* Use per address / operation id / is_error counters

* Cargo fmt

* typos fixes

* Cargo clippy fixes for tests

* Cargo fmt

* Add mock expectations + impl

* Cargo clippy for TU fixes

* Use MAX_EVENT_PER_OPERATION constant

* Unit test the filter optimisations

* Add more doc

* Cargo clippy fixes

* Use ..Default::default in TU

* Cargo clippy fix

* Use scope

* Use scope 2

* Remove tick_delay + directly mem::take struct

* Add tu for counter removal

* Add KeyKind in KeyBuilder

* Wait for condvar in wait_loop_event

* Removed unused lib

* Condvar wait fix

* Truncate event message in case of error

--- a/massa-execution-worker/Cargo.toml
+++ b/massa-execution-worker/Cargo.toml
@@ -29,6 +29,7 @@ test-exports = [
     "massa_metrics/test-exports",
     "massa_metrics/test-exports",
     "massa_db_worker",
+    "massa_event_cache/test-exports",
     "tempfile",
 ]
 benchmarking = [
@@ -86,6 +87,7 @@ massa_final_state = { workspace = true }
 massa_versioning = { workspace = true }
 massa_db_exports = { workspace = true }
 massa_db_worker = { workspace = true, optional = true }
+massa_event_cache = { workspace = true }
 tempfile = { workspace = true, optional = true }
 massa_wallet = { workspace = true }
 massa-proto-rs = { workspace = true }
@@ -111,4 +113,4 @@ tokio = { workspace = true, features = ["sync"] }
 hex-literal = { workspace = true }
 mockall = { workspace = true }
 assert_matches = { workspace = true }
-
+massa_event_cache = { workspace = true, features = ["test-exports"] }
