--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -39,7 +39,7 @@
     enable_broadcast = false
     # deferred credits delta (in milliseconds)
     deferred_credits_delta = 7776000000 # ~ 3 months (90×24×60×60×1000) in milliseconds
-    # max datastore keys query 
+    # max datastore keys query (also used by GRPC API)
     #max_datastore_keys_query = 500
 
 [grpc]
