--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -41,6 +41,8 @@
     deferred_credits_delta = 7776000000 # ~ 3 months (90×24×60×60×1000) in milliseconds
     # max datastore keys query
     max_datastore_keys_query = 500
+    # max number of addresses that can be included in a single request
+    max_addresses_datastore_keys_query = 50
 
 [grpc]
     [grpc.public]
