--- a/massa-module-cache/Cargo.toml
+++ b/massa-module-cache/Cargo.toml
@@ -3,9 +3,6 @@ name = "massa_module_cache"
 version = "2.5.0"
 edition = "2021"
 
-[features]
-test-exports = ["massa-sc-runtime/testing"]
-
 [dependencies]
 schnellru = {workspace = true}
 rand = {workspace = true}   # BOM UPGRADE     Revert to "0.8.5" if problem
@@ -19,8 +16,9 @@ rocksdb = {workspace = true}
 massa_hash = {workspace = true}
 massa_models = {workspace = true}
 massa_serialization = {workspace = true}
-massa-sc-runtime = {workspace = true, "features" = ["testing"]}
+massa-sc-runtime = {workspace = true}
 
 [dev-dependencies]
 tempfile = {workspace = true}   # BOM UPGRADE     Revert to "3.3" if problem
 serial_test = {workspace = true}
+massa-sc-runtime = {workspace = true, "features" = ["testing"]}
