Test(slot_outputs) : stream test + clippy

--- a/massa-grpc/Cargo.toml
+++ b/massa-grpc/Cargo.toml
@@ -54,5 +54,6 @@ massa_sdk = { workspace = true }
 massa_consensus_exports = { workspace = true, "features" = ["test-exports"] }
 massa_protocol_exports = { workspace = true, "features" = ["test-exports"] }
 massa_final_state = { workspace = true }
+massa_ledger_exports = { workspace = true }
 tokio = { workspace = true, "features" = ["test-util", "time"] }
-num = {workspace = true}
+num = { workspace = true }
