--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -39,6 +39,10 @@
     enable_broadcast = false
     # deferred credits delta (in milliseconds)
     deferred_credits_delta = 7776000000 # ~ 3 months (90×24×60×60×1000) in milliseconds
+    # max datastore keys query
+    max_datastore_keys_query = 500
+    # max number of addresses that can be included in a single request
+    max_addresses_datastore_keys_query = 50
 
 [grpc]
     [grpc.public]
@@ -114,6 +118,8 @@
         client_certificate_path = "../massa-client/config/tls_public_client.pem"
         # client private key path
         client_private_key_path = "../massa-client/config/tls_public_client.key"
+        # max datastore keys query
+        max_datastore_keys_query = 500
     [grpc.private]
         # whether to enable gRPC
         enabled = true
