--- a/massa-deferred-calls/Cargo.toml
+++ b/massa-deferred-calls/Cargo.toml
@@ -18,6 +18,7 @@ massa_serialization = { workspace = true }
 serde_with = { workspace = true }
 serde_json = { workspace = true }
 massa-proto-rs = { workspace = true, "features" = ["tonic"] }
+massa_metrics = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
