--- a/massa-node/Cargo.toml
+++ b/massa-node/Cargo.toml
@@ -32,6 +32,7 @@ execution-info = [
     "execution-trace",
     "massa_execution_worker/execution-info",
     "massa_execution_exports/execution-info",
+    "massa_grpc/execution-info",
 ]
 dump-block = [
     "massa_execution_worker/dump-block",
