add denunciation index

--- a/massa-execution-exports/Cargo.toml
+++ b/massa-execution-exports/Cargo.toml
@@ -35,6 +35,7 @@ massa_versioning = { workspace = true }
 massa-sc-runtime = { workspace = true }
 serde = { workspace = true, "features" = ["derive"] }
 schnellru = { workspace = true }
+tracing = { workspace = true }
 
 [dev-dependencies]
 mockall = { workspace = true }
