add metric for event cache

--- a/massa-event-cache/Cargo.toml
+++ b/massa-event-cache/Cargo.toml
@@ -4,30 +4,27 @@ version = "28.10.0"
 edition = "2021"
 
 [features]
-test-exports = [
-    "massa_models/test-exports",
-    "mockall",
-    "mockall_wrap"
-]
+test-exports = ["massa_models/test-exports", "mockall", "mockall_wrap"]
 
 
 [dependencies]
-nom = {workspace = true}
-rocksdb = {workspace = true}
-tracing = {workspace = true}
+nom = { workspace = true }
+rocksdb = { workspace = true }
+tracing = { workspace = true }
 parking_lot = { workspace = true }
 num_enum = { workspace = true }
-massa_models = {workspace = true}
-massa_serialization = {workspace = true}
-massa_time = {workspace = true}
-mockall = {workspace = true, optional = true}
-mockall_wrap = {workspace = true, optional = true}
+massa_metrics = { workspace = true }
+massa_models = { workspace = true }
+massa_serialization = { workspace = true }
+massa_time = { workspace = true }
+mockall = { workspace = true, optional = true }
+mockall_wrap = { workspace = true, optional = true }
 
 [dev-dependencies]
-tempfile = {workspace = true}
-serial_test = {workspace = true}
-more-asserts = {workspace = true}
-rand = {workspace = true}
-mockall = {workspace = true}
-mockall_wrap = {workspace = true}
+tempfile = { workspace = true }
+serial_test = { workspace = true }
+more-asserts = { workspace = true }
+rand = { workspace = true }
+mockall = { workspace = true }
+mockall_wrap = { workspace = true }
 massa_models = { workspace = true, features = ["test-exports"] }
