--- a/massa-db-worker/Cargo.toml
+++ b/massa-db-worker/Cargo.toml
@@ -8,11 +8,14 @@ test-exports = ["massa_db_exports/test-exports"]
 
 [dependencies]
 parking_lot = {workspace = true}
-rocksdb = {workspace = true}
+rocksdb = { workspace = true }
 massa_hash = {workspace = true}
 massa_models = {workspace = true}
 massa_serialization = {workspace = true}
 massa_db_exports = {workspace = true}
+
+[target.'cfg(target_os = "linux")'.dependencies]
+rocksdb = { workspace = true, features = ["jemalloc"] }
 
 [dev-dependencies]
 tempfile = {workspace = true}
