Change rocksdb, add jemalloc for linux, and update db options

--- a/massa-event-cache/Cargo.toml
+++ b/massa-event-cache/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 [features]
 test-exports = ["massa_models/test-exports", "mockall", "mockall_wrap"]
 
-
 [dependencies]
 nom = { workspace = true }
 rocksdb = { workspace = true }
@@ -28,3 +27,6 @@ rand = { workspace = true }
 mockall = { workspace = true }
 mockall_wrap = { workspace = true }
 massa_models = { workspace = true, features = ["test-exports"] }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+rocksdb = {workspace = true, features = ["jemalloc"]}
