--- a/massa-event-cache/Cargo.toml
+++ b/massa-event-cache/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [features]
 test-exports = ["massa_models/test-exports", "mockall", "mockall_wrap"]
+jemalloc = ["rocksdb/jemalloc"]
 
 [dependencies]
 nom = { workspace = true }
@@ -27,6 +28,3 @@ rand = { workspace = true }
 mockall = { workspace = true }
 mockall_wrap = { workspace = true }
 massa_models = { workspace = true, features = ["test-exports"] }
-
-[target.'cfg(target_os = "linux")'.dependencies]
-rocksdb = {workspace = true, features = ["jemalloc"]}
