--- a/massa-execution-worker/Cargo.toml
+++ b/massa-execution-worker/Cargo.toml
@@ -51,6 +51,11 @@ db_storage_backend = []
 file_storage_backend = []
 execution-info = ["execution-trace"]
 slot-replayer = []
+jemalloc = [
+    "rocksdb/jemalloc",
+    "massa_event_cache/jemalloc",
+    "massa_module_cache/jemalloc"
+]
 
 [dependencies]
 anyhow = { workspace = true }
@@ -116,6 +121,3 @@ hex-literal = { workspace = true }
 mockall = { workspace = true }
 assert_matches = { workspace = true }
 massa_event_cache = { workspace = true, features = ["test-exports"] }
-
-[target.'cfg(target_os = "linux")'.dependencies]
-rocksdb = {workspace = true, features = ["jemalloc"]}
