--- a/massa-module-cache/Cargo.toml
+++ b/massa-module-cache/Cargo.toml
@@ -3,6 +3,9 @@ name = "massa_module_cache"
 version = "2.5.0"
 edition = "2021"
 
+[features]
+jemalloc = ["rocksdb/jemalloc"]
+
 [dependencies]
 schnellru = {workspace = true}
 rand = {workspace = true}   # BOM UPGRADE     Revert to "0.8.5" if problem
@@ -22,6 +25,3 @@ massa-sc-runtime = {workspace = true}
 tempfile = {workspace = true}   # BOM UPGRADE     Revert to "3.3" if problem
 serial_test = {workspace = true}
 massa-sc-runtime = {workspace = true, "features" = ["testing"]}
-
-[target.'cfg(target_os = "linux")'.dependencies]
-rocksdb = {workspace = true, features = ["jemalloc"]}
