Add basic placeholder disclaimer

--- a/massa-models/Cargo.toml
+++ b/massa-models/Cargo.toml
@@ -20,6 +20,7 @@ num = { workspace = true, "features" = [
     "serde",
 ] } # BOM UPGRADE     Revert to {"version": "0.4", "features": ["serde"]} if problem
 directories = { workspace = true }
+dialoguer = { workspace = true }
 config = { workspace = true }
 bs58 = { workspace = true, "features" = ["check"] }
 bitvec = { workspace = true, "features" = [
