--- a/massa-node/base_config/config.toml
+++ b/massa-node/base_config/config.toml
@@ -2,6 +2,9 @@
     # Logging level. High log levels might impact performance. 0: ERROR, 1: WARN, 2: INFO, 3: DEBUG, 4: TRACE
     level = 2
 
+[cli]
+    approved_community_charter_file_path = "config/approved_community_charter.txt"
+
 [api]
     # max number of future periods considered during requests
     draw_lookahead_period_count = 10
